CHANGELOG
Version 1.1.1.0
 - Add Insurance Report
 - Cash Count Sheet disable when store is open

Version 1.1.0.5
 - Revise Segregation List Report
 - Item Pullout per Category Report
 - Add change rate module
 - Include BATCH FILE for backup
 - Fix ITEM PULLOUT
 - include BACKUP.BAT

Version 1.1.0.4
 - Add Entries for Segregation

Version 1.1.0.3
 - Item Pullout problem
 - Migration double name can causes wrong name
 - No Description will not be imported
 - POSAdmin can void
 - Fix Reports

Version 1.1.0.1
 - Fixing Pawning Print Button
 - Add Smart Money from Perfecom, Cash In/Out
 - iREMIT change into GPRS - iRemit to GPRS

Version 1.1
 - Enhancing PAWNING MODULE
 - Revise Early Redeem
 - Limit First 100 Clients to be display

Version 1.0.1
 - Change OR layout from 4.5 to 9" height
 - OR includes the duplicate
 - Loan, Money Transfer and Client TAB fix
 - Money Transfer - Enable multiple encoding
 - Money Transfer - swap label for Pay-Out and Send In
 - Sequence Report - Remove Borrowings and Insurance for redundancy
 - Sequence Report - Categories (Pera Padala ONLY)
 - Loan Register Report - Remove PHP sign to increase space
 - Loan - Recompute when changing TYPE