@@ -1,0 +1,2 @@
+1.0.6 to 1.0.7
+ - Insurance Field, PAWNTICKET type changed from INTEGER into STRING(30)
