@@ -2,6 +2,7 @@ CHANGELOG
 Version 1.1.1.0
  - Add Insurance Report
  - Cash Count Sheet disable when store is open
+ - Insurance Ref# length increase
 
 Version 1.1.0.5
  - Revise Segregation List Report
